<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group
        android:id="@+id/group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home_page"
            android:icon="@drawable/home_icon"
            android:iconTint="@color/colorPrimaryDark"
            android:title="@string/menu_home1" />
    </group>

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/iconaccount"
            android:iconTint="@color/colorPrimaryDark"
            android:title="@string/menu_home" />
    </group>
    <!--  <group
          android:id="@+id/group2"
          android:checkableBehavior="single">
          <item
              android:id="@+id/nav_gallery"
              android:icon="@drawable/iconaccount"
              android:title="@string/menu_gallery"

              android:iconTint="@color/colorPrimaryDark"/>
      </group>-->


    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_donor_switch"
            android:icon="@drawable/icons_user_donor_switch"
            android:title="I am [Donor] Avaialble"
            android:iconTint="@color/colorPrimaryDark"
            app:actionLayout="@layout/layout_donor_switch" />
    </group>

    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/iconlock"
            android:title="@string/menu_slideshow" />
    </group>
    <item
        android:id="@+id/nav_tools"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:iconTint="@color/colorPrimaryDark"
        android:title="@string/menu_tools" />


    <group
        android:id="@+id/group5"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/address_location"
            android:iconTint="@color/colorPrimaryDark"
            android:title="ADDRESS" />
    </group>

    <group
        android:id="@+id/group4"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:iconTint="@color/colorPrimaryDark"
            android:title="LOGOUT" />
    </group>
</menu>
